@@ -1,3 +1,7 @@
+2011-12-20 Erwin Waterlander <waterlan@xs4all.nl>
+	* querycp.c: Extra comment from Rugxulo.
+	* querycp.c: Undid change of 2011-11-12. Behave as Cygwin version.
+
 2011-12-15 Erwin Waterlander <waterlan@xs4all.nl>
 	* wccdos32.mak: New makefile for Open Watcom for DOS32.
 
